--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2009-06-10  Martin Baulig  <martin@ximian.com>
+
+	* classes/GUIManager.cs
+	(GUIManager.EvaluateExpressionAsync): Return an
+	`ExpressionEvaluator.AsyncResult'.
+
 2009-06-04  Martin Baulig  <martin@ximian.com>
 
 	* backend/SingleSteppingEngine.cs
