--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2009-06-20  Martin Baulig  <martin@ximian.com>
+
+	* classes/Backtrace.cs
+	(Backtrace.IsFrameOkForMode): `Mode.Default' defaults to native
+	unless we're debugging a managed application.
+
 2009-06-18  Martin Baulig  <martin@ximian.com>
 
 	* backend/os/Bfd.cs
