--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2009-06-20  Martin Baulig  <martin@ximian.com>
 
+	* backend/MonoThreadManager.cs: Reflect latest runtime changes; if
+	the target runtime is at least 81.3, check the new 'thread_flags'
+	field in the 'MonoDebuggerThreadInfo' to detect daemon threads.
+
+2009-06-20  Martin Baulig  <martin@ximian.com>
+
 	Fix attaching support.
 
 	* backend/MonoThreadManager.cs
