Fix a regression introduced in r136640: reset the 'operation_completed_event' when starting a new operation. 2009-06-20  Martin Baulig  <martin@ximian.com>
	* backend/SingleSteppingEngine.cs
	(SSE.StartOperation): Fix a regression introduced in r135640:
	reset `operation_completed_event' when starting a new operation.

svn path=/branches/mono-2-4/debugger/; revision=136620

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2009-06-20  Martin Baulig  <martin@ximian.com>
+
+	* backend/SingleSteppingEngine.cs
+	(SSE.StartOperation): Fix a regression introduced in r135640:
+	reset `operation_completed_event' when starting a new operation.
+
 2009-06-16  Martin Baulig  <martin@ximian.com>
 
 	* classes/ExpressionEvaluator.cs
