--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2009-06-29  Martin Baulig  <martin@ximian.com>
+
+	* languages/mono/MonoClassInfo.cs
+	(MonoClassInfo.GetFields): Don't throw an exception if the class
+	doesn't have any fields.
+
 2009-06-22  Martin Baulig  <martin@ximian.com>
 
 	* languages/mono/MonoClassInfo.cs
