Interpreter.WaitAll(): Correctly detect whether we're already exited. 2009-06-30  Martin Baulig  <martin@ximian.com>
	* classes/Debugger.cs
	(Debugger.HasTarget): New public property.

	* frontend/Interpreter.cs
	(Interpreter.HasTarget): Also check 'debugger.HasTarget'.

svn path=/trunk/debugger/; revision=137159

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,13 @@
 2009-06-30  Martin Baulig  <martin@ximian.com>
 
+	* classes/Debugger.cs
+	(Debugger.HasTarget): New public property.
+
+	* frontend/Interpreter.cs
+	(Interpreter.HasTarget): Also check 'debugger.HasTarget'.
+
+2009-06-30  Martin Baulig  <martin@ximian.com>
+
 	* backend/server/x86-linux-ptrace.c
 	(server_ptrace_kill): Don't call kill(), `ptrace (PTRACE_KILL)'
 	should be enough.
