On 'NotificationType.GcThreadExited': silently resume the target, ignoring any errors. 2009-06-30  Martin Baulig  <martin@ximian.com>
	* backend/MonoThreadManager.cs
	(MonoThreadManager.HandleChildEvent): In
	`NotificationType.GcThreadExited', resume the target and ignore
	any errors; for some reason, the thread may have died already by
	the time we get the notification.

svn path=/trunk/debugger/; revision=137160

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,13 @@
 2009-06-30  Martin Baulig  <martin@ximian.com>
 
+	* backend/MonoThreadManager.cs
+	(MonoThreadManager.HandleChildEvent): In
+	`NotificationType.GcThreadExited', resume the target and ignore
+	any errors; for some reason, the thread may have died already by
+	the time we get the notification.
+
+2009-06-30  Martin Baulig  <martin@ximian.com>
+
 	* classes/Debugger.cs
 	(Debugger.HasTarget): New public property.
 
