--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2009-06-30  Martin Baulig  <martin@ximian.com>
 
+	* backend/SingleSteppingEngine.cs
+	(SSE.Kill): Stop the target before killing it; for some reason,
+	`ptrace (PTRACE_KILL)' doens't work while the target is running.
+
+2009-06-30  Martin Baulig  <martin@ximian.com>
+
 	* backend/MonoThreadManager.cs
 	(MonoThreadManager.HandleChildEvent): In
 	`NotificationType.GcThreadExited', resume the target and ignore
