--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2009-07-01  Martin Baulig  <martin@ximian.com>
+
+	* languages/mono/MonoRuntime.cs
+	(MonoRuntime.GetGenericParameter): Check whether the name field is
+	non-null and use `!0' etc. otherwise.
+
 2009-06-30  Martin Baulig  <martin@ximian.com>
 
 	* backend/SingleSteppingEngine.cs
