--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2009-07-01  Martin Baulig  <martin@ximian.com>
+
+	**** Backport of 137172 ****
+
+	* languages/mono/MonoRuntime.cs
+	(MonoRuntime.GetGenericParameter): Check whether the name field is
+	non-null and use `!0' etc. otherwise.
+
 2009-06-29  Martin Baulig  <martin@ximian.com>
 
 	* languages/mono/MonoClassInfo.cs
