--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2009-07-03  Jonathan Chambers  <joncham@gmail.com>
+
+	* build/Mono.Debugger.csproj: Add backend/os directory.
+
+	* frontend/CSharpExpressionParser.cs.win: Update.
+
 2009-07-01  Martin Baulig  <martin@ximian.com>
 
 	* languages/mono/MonoRuntime.cs
