--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2009-07-13  Jonathan Chambers  <joncham@gmail.com>
 
+	* backend/Inferior.cs: Add and handle WINDOWS server type.
+
+2009-07-13  Jonathan Chambers  <joncham@gmail.com>
+
 	* backend/os/PEReader.cs: Add.
 
 	* backend/os/WindowsOperatingSystem.cs: Add.
