--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,57 @@
+2009-07-08  Martin Baulig  <martin@ximian.com>
+
+	Martin's new Threading Model.
+
+	* classes/GUIManager.cs
+	(GUIManager): Made this obsolete, it's now just a tiny wrapper
+	around the new API.
+
+	* classes/Operation.cs: New file.
+	(ThreadingModel): New public enum.
+	(CommandResult): New public abstract class.
+	(OperationHost): New internal interface.
+	(OperationCommandResult): New public class.
+
+	* backend/ThreadServant.cs
+	(ThreadServant.StepInstruction): Removed, use the new Step() API.
+	(ThreadServant.StepNativeInstruction): Likewise.
+	(ThreadServant.NextInstruction): Likewise.
+	(ThreadServant.StepLine): Likewise.
+	(ThreadServant.NextLine): Likewise.
+	(ThreadServant.Finish): Removed, use the new Step() API.
+
+	* backend/SingleSteppingEngine.cs
+	(SSE.OperationStep): Add support for `StepMode.Run'; this
+	obsoletes `OperationRun'.
+	(SSE.OperationRun): Removed; use `OperationStep' with `StepMode.Run'.
+	(SSE.OperationFinish): Removed; use `OperationStep' with
+	`StepMode.Finish' or `StepMode.FinishNative'.
+
+	* backend/StepFrame.cs: Moved to ../classes/StepFrame.cs.
+
+	* classes/StepFrame.cs
+	(StepMode): Made this public.
+	(StepFrame): Make this public and [Serializable].
+	(StepMode.Run): Added.
+	(StepMode.FinishNative): Added.
+	(StepFrame.Until): New public property; only valid in`
+	StepMode.Run'.
+
+	* classes/Thread.cs
+	(Thread.Step): New public function.
+	(Thread.StepInstruction): Obsolete, use the new Step() API.
+	(Thread.StepNativeInstruction): Likewise.
+	(Thread.NextInstruction): Likewise.
+	(Thread.StepLine): Likewise.
+	(Thread.NextLine): Likewise.
+	(Thread.Continue): Use `Step (StepMode.Run)'.
+	(Thread.Background): Obsolete; this was never implemented and
+	always the same as Continue().
+	(Thread.Finish): Obsolete, use the new Step() API.
+
+	* backend/ThreadServant.cs
+	(ThreadServant.Step): New public function.
+
 2009-07-13  Jonathan Chambers  <joncham@gmail.com>
 
 	* backend/Inferior.cs: Add and handle WINDOWS server type.
