--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2009-08-04  Martin Baulig  <martin@ximian.com>
+
+	**** Backport of 139301 ****
+
+	* backend/SingleSteppingEngine.cs
+	(SSE.OperationRuntimeInvokeHelper): Improve error handling.
+
 2009-07-01  Martin Baulig  <martin@ximian.com>
 
 	**** Backport of 137172 ****
