--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,20 @@
+**** Backport of 139302 ****
+2009-08-04  Martin Baulig  <martin@ximian.com>
+
+	**** Backport of 139302 ****
+
+	* frontend/ExpressionParser.cs: New file.
+	(ExpressionParser): Moved here from Expression.cs.
+	(ExpressionParser.GetVariableAccessExpression): Added.
+	(ExpressionParser.GetMemberAccessExpression): Added.
+
+	* frontend/Expression.cs
+	(StructAccessExpression): Made the .ctor public.
+
+	* classes/ExpressionEvaluator.cs
+	(EE.IExpression): Renamed `EvaluateAsync' -> `Evaluate'.
+	(EE.IExpression): Added `Assign'.
+
 2009-08-04  Martin Baulig  <martin@ximian.com>
 
 	**** Backport of 139301 ****
